--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -2,4 +2,9 @@
     .progressBar{
         display: none;
     }
+    .btn-1{
+        padding: 8px 10px;
+        font-size: 16px;
+        background-color: red;
+    }
   }
